Whitespace Fix
Fix for bug causing excess whitespace on mobile devices.

overflow-x: hidden on parent elements

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    overflow-x: hidden;
     font-family: Typewolf, sans-serif;
 }
 
@@ -15,6 +14,8 @@ body {
     background-color: #1A1A1D;
     background-image: linear-gradient(90deg, rgba(17, 16, 16, 0.795) 50%, rgba(0, 0, 0, 0.767) 74%), url(./Images/intro_2.jpg); 
     border-bottom: 2px solid #1A1A1D;
+    overflow-x: hidden;
+
 }
 
 .bg-cover {
@@ -431,6 +432,8 @@ button:active {
     grid-template-rows: 3rem 5fr 4rem; 
     column-gap: 1rem;
     background-color: whitesmoke;
+    overflow-x: hidden;
+
 }
 
 .projects-title {
@@ -616,6 +619,8 @@ button:active {
     grid-template-columns: 9rem 0.2fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 5rem 1fr 2fr 1rem;
     column-gap: 1rem;
+    overflow-x: hidden;
+
 }
 
 
@@ -746,6 +751,8 @@ button:active {
     grid-template-columns: 9rem repeat(5, 1fr);
     grid-template-rows: 3rem 6rem 1fr 1fr 1fr;
     column-gap: 1rem;
+    overflow-x: hidden;
+
 }
 
 form {
@@ -924,6 +931,8 @@ form {
     border-top: 2px solid #45A29E;
     background-color: #151516;
     word-wrap: break-word;
+    overflow-x: hidden;
+
 }
 
 .footer h3 {
